add media links

--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 .swiper-button-next,
 .swiper-button-prev {
   color: #725142; 
-  background: #fceedd;
+  background: #fceeddb9;
   width: 2.5rem;
   height: 2.5rem;
   border-radius: 50%;
